25032026/sce-front-auditoria/sce-front-auditoria/devops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sce-front-service
  labels:
    app: sce-front
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: httpexternal
  selector:
    app: sce-front
