25032026/sce-front-auditoria/sce-front-auditoria/devops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sce-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'GET,POST'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "800"
spec:
  rules:
  - host: k8s-sce-nacion.dev.onpe.gob.pe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sce-front-service
            port:
              number: 80
      - path: /sce-nacion-backend
        pathType: Prefix
        backend:
          service:
            name: sce-nacion-backend-service
            port:
              number: 80
